# mrchem

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CMakeLists.txt  Pipfile  README.md  bundle_xc.py  changed_code.txt  collect_changed_code.py  dump_mrchem_files.py  h20_b3lyp.in  h2_b3lyp.fixed.json  h2_b3lyp.in  h2_b3lyp.json  h2o.json  makedoc.sh  mrchem_selection_dump_20250825_193702.txt  out.txt  repo_layout.txt  requirements.txt  script_install.sh  setup  xc_bundle_20250825_012432.txt  xc_bundle_20250825_142614.txt  your_b3lyp.inp  your_b3lyp.json
mrchem/: CMakeLists.txt  MRChemConfig.cmake.in  mrchem.in
mrchem/src/: CMakeLists.txt  SCFDriver.cpp  SCFDriver.h  parallel.cpp  parallel.h
mrchem/tests/: CMakeLists.txt
src/: CMakeLists.txt  SCFDriver.cpp  SCFDriver.h  driver.cpp  driver.h  mrchem.cpp  mrchem.h  mrchem.in  mrenv.cpp  mrenv.h  parallel.cpp  parallel.h
src/analyticfunctions/: CMakeLists.txt  CUBEfunction.cpp  CUBEfunction.h  ConfinementFunction.cpp  ConfinementFunction.h  FiniteNucleusGaussian.h  FiniteNucleusSphere.h  HarmonicOscillatorFunction.h  HydrogenFunction.cpp  HydrogenFunction.h  NuclearFunction.cpp  PointNucleusHFYGB.h  PointNucleusMinimum.h  PointNucleusParabola.h
src/chemistry/: CMakeLists.txt  Cavity.cpp  Cavity.h  Molecule.cpp  Molecule.h  Nucleus.h  Permittivity.cpp  Permittivity.h  PhysicalConstants.cpp  PhysicalConstants.h  chem_utils.h  chemistry_utils.cpp  chemistry_utils.h
src/environment/: CMakeLists.txt  Cavity.cpp  Cavity.h  DHScreening.cpp  DHScreening.h  GPESolver.cpp  GPESolver.h  LPBESolver.cpp  LPBESolver.h  PBESolver.cpp  PBESolver.h  Permittivity.cpp  Permittivity.h  ReactionOperator.h  ReactionPotential.cpp  ReactionPotential.h  SCRF.cpp  SCRF.h  ShiftFunction.cpp  ShiftFunction.h  StepFunction.cpp  StepFunction.h
src/external_solvers/: CMakeLists.txt  ChemTensorSolver.cpp  ChemTensorSolver.h  ExternalSolver.cpp  ExternalSolver.h
src/initial_guess/: CMakeLists.txt  chk.cpp  core.cpp  core.h  core_guess.cpp  cube.cpp  gto.cpp  gto.h  gto_guess.cpp  hydrogen.cpp  mw.cpp  nao.cpp  nao.h  sad.cpp  sad.h  sad_guess.cpp
src/input/: CMakeLists.txt  mrchem.in  template.yml
src/mrchem/: CMakeLists.txt  SCFDriver.cpp  SCFDriver.h  mrchem.in
src/mrcpp/: CMakeLists.txt  MathUtils.cpp  blas.h
src/mrdft/: CMakeLists.txt  Factory.cpp  Factory.h  Functional.cpp  Functional.h  GGA.cpp  GGA.h  Grid.h  LDA.cpp  LDA.h  LibXCBackend.cpp  LibXCBackend.h  SpinGGA.cpp  SpinGGA.h  SpinLDA.cpp  SpinLDA.h  xc_backend.h  xc_backend_xcfun.cpp  xc_func_alias.cpp  xc_func_alias.h  xc_utils.cpp  xc_utils.h
src/mrlibxc/: CMakeLists.txt  Factory.cpp  Factory.h  Factory.txt  LDA.cpp  LDA.h  LibXC.cpp  LibXC.h
src/properties/: DipoleMoment.h  ExcitationEnergies.h  GeometryDerivatives.h  HirshfeldCharges.h  Magnetizability.h  NMRShielding.h  OrbitalEnergies.h  Polarizability.h  PopulationAnalysis.h  QuadrupoleMoment.h  SCFEnergy.h  properties_fwd.h
src/pseudopotential/: PPNucleus.h  projector.cpp  projector.h  projectorOperator.h  pseudopotential.h  sphericalHarmonics.cpp
src/qmfunctions/: CMakeLists.txt  ComplexFunction.h  Density.cpp  Density.h  Orbital.cpp  Orbital.h  OrbitalIterator.cpp  OrbitalIterator.h  QMFunction.cpp  QMFunction.h  density_utils.cpp  density_utils.h  orbital_utils.cpp  orbital_utils.h  qmfunction_fwd.h  qmfunction_utils.cpp  qmfunction_utils.h  qmfunctions.cpp
src/qmoperators/: CMakeLists.txt  QMDerivative.cpp  QMDerivative.h  QMIdentity.h  QMOperator.h  QMPotential.cpp  QMPotential.h  QMSpin.cpp  QMSpin.h  RankZeroTensorOperator.h  qmoperator_utils.cpp  qmoperator_utils.h
src/scf_solver/: Accelerator.cpp  Accelerator.h  CMakeLists.txt  EnergyOptimizer.cpp  ExcitedStatesSolver.cpp  ExcitedStatesSolver.h  GroundStateSolver.cpp  GroundStateSolver.h  HelmholtzVector.cpp  HelmholtzVector.h  HigherResponseSolver.cpp  HigherResponseSolver.h  KAIN.cpp  LagrangianSolver.cpp  LagrangianSolver.h  LinearResponseSolver.cpp  OrbitalOptimizer.cpp  SCF.h  SCFSolver.cpp  SCFSolver.h
src/surface_forces/: SurfaceForce.cpp
src/tensor/: RankOneOperator.cpp  RankOneOperator.h  RankZeroOperator.cpp  RankZeroOperator.h  TensorOperator.h  tensor_utils.cpp
src/utils/: Bank.cpp  CMakeLists.txt  MolPlotter.h  NonlinearMaximizer.cpp  NonlinearMaximizer.h  PolyInterpolator.h  RRMaximizer.cpp  RRMaximizer.h  json_utils.h  math_utils.cpp  math_utils.h  periodic_utils.cpp  periodic_utils.h  print_utils.cpp
src/vc_sqnm/: mrchem_optimizer.hpp  sqnm.hpp
tests/: .gitignore  CMakeLists.txt  runtest_config.py  tester.py
tests/2h2o_far_energy_pbe/: 2h2o.inp  CMakeLists.txt  test
tests/c6h6/: CMakeLists.txt
tests/cavity_input_parser/: CMakeLists.txt
tests/cube_parser/: CMakeLists.txt
tests/h2/: CMakeLists.txt
tests/h2_mag_lda/: CMakeLists.txt
tests/h2_magnetic_properties_lda/: CMakeLists.txt  h2.inp  test
tests/h2_pol_cube/: CMakeLists.txt
tests/h2_pol_lda/: CMakeLists.txt  h2.inp  test
tests/h2_pol_solv/: CMakeLists.txt
tests/h2_polarizability_cube/: CMakeLists.txt  h2.inp  test
tests/h2_polarizability_solvent_effect/: CMakeLists.txt  h2-eq.inp  h2-neq.inp  test
tests/h2_scf_b3lyp_libxc/: CMakeLists.txt  h2.inp  h2.out  test
tests/h2_scf_cube/: CMakeLists.txt  h2.inp
tests/h2_scf_hf/: CMakeLists.txt  h2.inp  test
tests/h2_scf_lda_libxc/: CMakeLists.txt  h2.inp  test
tests/h2_scf_libxc_b3lyp/: CMakeLists.txt  test
tests/h2_scf_libxc_lda/: CMakeLists.txt  test
tests/h2_scf_libxc_svwn5/: CMakeLists.txt  h2.inp
tests/h2_scf_pbe0_libxc/: CMakeLists.txt  h2.inp  h2.out
tests/h2_scf_svwn5_libxc/: CMakeLists.txt
tests/h2_scf_xcfun_b3lyp/: CMakeLists.txt  h2.inp
tests/h2_scf_xcfun_lda/: CMakeLists.txt  h2.inp
tests/h2_static_polarizability_lda/: CMakeLists.txt  h2.inp  test
tests/h2_tda_cube/: CMakeLists.txt  h2.inp  test
tests/h2o/: CMakeLists.txt
tests/h2o_energy_b3lyp_libxc/: CMakeLists.txt  h2o.inp
tests/h2o_energy_blyp/: CMakeLists.txt  h2o.inp  test
tests/h2o_hirshfeld_lda/: CMakeLists.txt  h2o.inp  test
tests/h_el_field/: CMakeLists.txt  mrchem.stdout.filtered  (+2 more)
(+671 files in other folders)
